# ccInfer

./: .clang-format  .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
scripts/: compare_layer_outputs.py  generate_tokenizer_reference.py  qwen3_correctness_reference.py  run_correctness_check.py  save_hf_intermediate.py  save_ref_layer_outputs.py  save_ref_logits.py
scripts/benchmark/: benchmark.py  harness.py  metrics.py  workload.py
src/: CMakeLists.txt  main.cpp
src/backend/: backend.h  default_backend.h  device_buffer.h  params.h
src/backend/cuda/: cuda_backend.cpp  cuda_backend.h  cuda_buffer.cpp  cuda_buffer.h  cuda_dtype_traits.h  cuda_utils.h
src/base/: asio_error.h  channel.h  error_code.h  execution.h  request.h  result.h  runtime_config.h  types.h
src/cache/: block.h  cache_stats.h  kv_cache_manager.cpp  kv_cache_manager.h  kv_cache_storage.cpp  kv_cache_storage.h  prefix_cache.cpp  prefix_cache.h
src/common/: asio_error.h  channel.h  dtype.h  error_code.h  hash.h  result.h  types.h
src/core/: dtype.h  tensor.h  traits.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h
src/engine/backend/: backend.h  device_buffer.h  params.h
src/engine/backend/cuda/: cuda_backend.cpp  cuda_backend.h  cuda_buffer.cpp  cuda_buffer.h  cuda_dtype_traits.h  cuda_utils.h
src/engine/cache/: block.h  cache_stats.h  kv_cache_manager.cpp  kv_cache_manager.h  kv_cache_storage.cpp  kv_cache_storage.h  prefix_cache.cpp  prefix_cache.h
src/engine/common/: backend_def.h  dtype.h  hash.h  traits.h  types.h
src/engine/core/: device_buffer.h  tensor.h
src/engine/executor/: executor.h  single_device_executor.cpp  single_device_executor.h
src/engine/kernel/: common.h  cuda_common.cuh  cuda_kernels.h
src/engine/kernel/attention/: attn_common.cuh  decode_attn.cu  naive_attn.cu  naive_attn.h  prefill_attn.cu  write_kv_cache.cu
src/engine/kernel/elementwise/: elementwise.cu
src/engine/kernel/mlp/: silu_mul.cu  silu_mul.h
src/engine/kernel/norm/: rms_norm.cu  rms_norm.h
src/engine/kernel/pos/: rope.cu  rope.h  rope_cache.cpp  rope_cache.h
src/engine/kernel/sampling/: sample.cu
src/engine/model/: config.h  loader.cpp  loader.h  model.h  model_runner.cpp  model_runner.h  model_runner.tpp  registry.cpp  registry.h  weights.h
src/engine/model/llama/: llama_model.cpp  llama_model.h
src/engine/model/llama2/: llama2_weights.cpp  llama2_weights.h  llama_model.cpp  llama_model.h
src/engine/model/qwen3/: qwen3_model.cpp  qwen3_model.h  qwen3_weights.cpp  qwen3_weights.h
src/engine/model/rope/: rope_cache.cpp  rope_cache.h
src/engine/runner/: model_runner.cpp  model_runner.h
src/engine/sampling/: sampler.cpp  sampler.h
src/engine/tokenizer/: byte_level_bpe_tokenizer.cpp  byte_level_bpe_tokenizer.h  tokenizer.h
src/engine/worker/: batch_translator.cpp  batch_translator.h  worker.cpp  worker.h
src/engine/worker/cuda/: execution_context.h
src/executor/: executor.h  single_device_executor.cpp  single_device_executor.h
src/http/: http_server.cpp  http_server.h
src/kernel/: common.h  cuda_common.cuh  cuda_kernels.h
src/kernel/attention/: attn_common.cuh  decode_attn.cu  naive_attn.cu  prefill_attn.cu  write_kv_cache.cu
src/kernel/elementwise/: elementwise.cu
src/kernel/mlp/: silu_mul.cu
src/kernel/norm/: rms_norm.cu
src/kernel/pos/: rope.cu
src/kernel/sampling/: sample.cu
src/model/: config.h  loader.cpp  loader.h  model.h  model_runner.h  registry.cpp  registry.h
src/model/qwen3/: qwen3_model.cpp  qwen3_model.h  qwen3_weights.cpp  qwen3_weights.h
src/model/rope/: rope_cache.cpp  rope_cache.h
src/scheduler/: scheduler.cpp  scheduler.h
src/server/: CMakeLists.txt  server.cpp  server.h
src/server/common/: types.h
src/server/http/: http_server.cpp  http_server.h
src/server/scheduler/: scheduler.cpp  scheduler.h
src/server/tokenizer/: byte_level_bpe_tokenizer.cpp  byte_level_bpe_tokenizer.h  tokenizer.h
src/tokenizer/: byte_level_bpe_tokenizer.cpp  byte_level_bpe_tokenizer.h  tokenizer.h
src/worker/: batch_translator.cpp  batch_translator.h  worker.cpp  worker.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_e2e_server.cpp  test_kv_cache_forward.cpp  test_layer_match.cpp  test_logits_match.cpp  test_prefix_cache_e2e.cpp
tests/kernel/: CMakeLists.txt  test_decode_attn.cu  test_gemm.cu  test_naive_attn.cu  test_prefill_attn.cu  test_rms_norm.cu  test_rope.cu  test_sample.cu  test_silu_mul.cu  test_write_kv_cache.cu
tests/unit/: CMakeLists.txt  test_batch_translator.cpp  test_block.cpp  test_config.cpp  test_device_buffer.cpp  test_kv_cache_manager.cpp  test_kv_cache_storage.cpp  test_prefix_cache.cpp  test_result.cpp  test_sampler.cpp  test_scheduler.cpp  test_smoke.cpp  test_tensor.cpp  test_tokenizer.cpp  test_tokenizer_alignment.cpp  tokenizer_alignment_reference.json
